# AD3

./: AD3Config.cmake.in  CMakeLists.txt
ad3/: GenericFactor.cpp
cmake/modules/: FindEigen.cmake
recipe/: meta.yaml
